# game-of-life

./: LICENSE  README.md  game-of-life.cabal
Monads/: FailableState.hs  Monads.hs  StateMonad.hs
UML/: rOjterGameOfLife-UML.vsdx
app/: Main.hs
shaders/: cube.frag  cube.vert
src/Graphics/: Cube.hs  Init.hs  Shaders.hs
src/Input/: Controls.hs  Events.hs  Presets.hs
src/Program/: Loop.hs
test/: Main.hs
