name:                game-of-life
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/black0range/game-of-life#readme
license:             BSD3
license-file:        LICENSE
author:              Tomas Möre
maintainer:          tomas.o.more@gmail.com
copyright:           MIT
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Graphics.Init
                     , Graphics.Shaders
                     , Graphics.Cube
                     , Input.Events
                     , Input.Controls
                     , Input.Presets
                     , Program.Loop
  build-depends:       base >= 4.7 && < 5
                     , GLFW-b >= 1.4.8
                     , containers
                     , OpenGL >=  3.0
                     , StateVar
                     , filepath
                     , bytestring
                     , mtl
                     , stm
                     , vector
                     , time
  default-language:    Haskell2010

executable game-of-life
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , game-of-life
                     , GLFW-b
                     , mtl
                     , transformers
                     , directory
                     , containers
                     , OpenGL
                     , time
  default-language:    Haskell2010

test-suite game-of-life-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  build-depends:       base
                     , game-of-life
                     , GLFW-b
                     , mtl
                     , transformers
                     , directory
                     , containers
                     , OpenGL
                     , time
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/black0range/game-of-life
